# InfinityInc

./: .gitignore  README.md  ScreenSommelier.py  bootstrap.sh  flaskr README.rst  requirements.txt  screen_sommelier.db
Main/: main.py
screen_sommelier/: .gitignore  pyproject.toml
screen_sommelier/instance/: screen_sommelier.sqlite
screen_sommelier/main/: MovieAPI.py  main.py  models.py  suggestions.py
screen_sommelier/screen_sommelier/: MovieAPI.py  __init__.py  auth.py  blog.py  db.py  library.py  main.py  movie_db.py  movie_fetcher.py  poster_binary.py  postgres_test.py  schema.sql
screen_sommelier/screen_sommelier/static/: scripts.js  style.css
screen_sommelier/screen_sommelier/templates/: base.html  popular.html
screen_sommelier/screen_sommelier/templates/auth/: landing_page.html  login.html  register.html
screen_sommelier/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
