[project]
name = "screen_sommelier"
version = "1.0.0"
description = "The app to find recommendations based on your streaming services."
readme = "README.md"
dependencies = [
    "flask",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "screen_sommelier"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["screen_sommelier", "tests"]

[tool.ruff]
src = ["src"]
